---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2020.12.12
  Features:
    - Added Krastorio 2 support
  Changes:
    - Switch omnitor assemling machine´s crafting category from basic-crafting to crafting
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2020.11.26
  Info:
    - Updated for Factorio version 1.1.0
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2020.10.04
  Bugfixes:
    - Properly hide logistics tech that has no unlocks
    - Fixed Fuel Refining tier 3 having hidden prereqs in some cases
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2020.09.01
  Bugfixes:
    - Fixed a crash with Deadlocks integrations mod
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2020.08.31
  Features:
    - Added heretical scripts to allow Pyanodons to work with this...even without the AB patch mod
    -   Confirmed to work up to green science... be warned, burner phase lasts a log while
  Changes:
    - Renamed technology "basic-omnium-power" to "omnitech-basic-omnium-power"
    - Renamed technology "anbaricity" to "omnitech-anbaricity"
    - Renamed technology "simple-automation" to "omnitech-simple-automation"
    - Renamed technology "anbaric-lab" to "omnitech-anbaric-lab"
    - Renamed technology "anbaric-mining" to "omnitech-anbaric-mining"
    - Renamed technology "burner-filter-1" to "omnitech-burner-filter-1"
    - Renamed technology "burner-filter-2" to "omnitech-burner-filter-2"
    - Renamed technology "anbaric-inserter" to "omnitech-anbaric-inserter"
    - Renamed technology "steam-power" to "omnitech-steam-power"
    - Renamed technology "belt-logistics" to "omnitech-belt-logistics"